compiler-plugin-tests/src/test/resources/sample2/s2-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: c2c.deployment.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 9090
